Fix measurements of classes using @Contended