@@ -1,5 +1,6 @@
 package org.github.jamm.strategies;
 
+import java.lang.annotation.Annotation;
 import java.lang.instrument.Instrumentation;
 import java.lang.invoke.MethodHandle;
 import java.lang.invoke.MethodHandles;
@@ -65,11 +66,12 @@ public final class MemoryMeterStrategies
 
         MemoryLayoutSpecification specification = MemoryLayoutSpecification.getEffectiveMemoryLayoutSpecification();
 
+        Class<? extends Annotation> contendedClass = loadContendedClass();
         Optional<MethodHandle> mayBeIsHiddenMH = mayBeIsHiddenMethodHandle();
 
         MemoryMeterStrategy instrumentationStrategy = createInstrumentationStrategy();
-        MemoryMeterStrategy specStrategy = createSpecStrategy(specification, mayBeIsHiddenMH);
-        MemoryMeterStrategy unsafeStrategy = createUnsafeStrategy(specification, mayBeIsHiddenMH, (MemoryLayoutBasedStrategy) specStrategy);
+        MemoryMeterStrategy specStrategy = createSpecStrategy(specification, mayBeIsHiddenMH, contendedClass);
+        MemoryMeterStrategy unsafeStrategy = createUnsafeStrategy(specification, contendedClass, mayBeIsHiddenMH, (MemoryLayoutBasedStrategy) specStrategy);
 
         // Logging important information once at startup for debugging purpose
         System.out.println("Jamm starting with: java.version='" + System.getProperty("java.version")
@@ -81,22 +83,31 @@ public final class MemoryMeterStrategies
         return new MemoryMeterStrategies(instrumentationStrategy, unsafeStrategy, specStrategy);
     }
 
-    private static MemoryMeterStrategy createSpecStrategy(MemoryLayoutSpecification specification, Optional<MethodHandle> mayBeIsHiddenMH) {
+    private static MemoryMeterStrategy createSpecStrategy(MemoryLayoutSpecification specification,
+                                                          Optional<MethodHandle> mayBeIsHiddenMH,
+                                                          Class<? extends Annotation> contendedClass) {
 
         if (mayBeIsHiddenMH.isPresent() && !VM.useEmptySlotsInSuper())
             System.out.println("WARNING: Jamm is starting with the UseEmptySlotsInSupers JVM option disabled."
                                + " The memory layout created when this option is enabled cannot always be reproduced accurately by the SPEC or UNSAFE strategies."
                                + " By consequence the measured sizes when these strategies are used might be off in some cases.");
 
+        // @Contended was introduced in Java 8 as {@code sun.misc.Contended} but was repackaged in the jdk.internal.vm.annotation package in Java 9.
+        // Therefore in Java 9+ unless '-XX:-RestrictContended' or '--add-exports java.base/jdk.internal.vm.annotation=ALL-UNNAMED' is specified we will not have access
+        // to the value() method of @Contended and will be unable to retrieve the contention group tags and might be unable to computes the correct sizes.
+        // Nevertheless, it also means that only the internal Java classes will use that annotation and we know which one they are. Therefore we can rely on this fact to mitigate the problem.
+        Optional<MethodHandle> mayBeContendedValueMH = mayBeMethodHandle(contendedClass, "value");
+
         // The Field layout was optimized in Java 15. For backward compatibility reasons, in 15+, the optimization can be disabled through the {@code -XX:-UseEmptySlotsInSupers} option.
         // (see https://bugs.openjdk.org/browse/JDK-8237767 and https://bugs.openjdk.org/browse/JDK-8239016)
         // Unfortunately, when {@code UseEmptySlotsInSupers} is disabled the layout resulting does not match the pre-15 versions
-        return mayBeIsHiddenMH.isPresent() ? VM.useEmptySlotsInSuper() ? new SpecStrategy(specification)
-                                                                       : new DoesNotUseEmptySlotInSuperSpecStrategy(specification)
-                                           : new PreJava15SpecStrategy(specification);
+        return mayBeIsHiddenMH.isPresent() ? VM.useEmptySlotsInSuper() ? new SpecStrategy(specification, contendedClass, mayBeContendedValueMH)
+                                                                       : new DoesNotUseEmptySlotInSuperSpecStrategy(specification, contendedClass, mayBeContendedValueMH)
+                                           : new PreJava15SpecStrategy(specification, contendedClass, mayBeContendedValueMH);
     }
 
-    private static MemoryMeterStrategy createUnsafeStrategy(MemoryLayoutSpecification specification, 
+    private static MemoryMeterStrategy createUnsafeStrategy(MemoryLayoutSpecification specification,
+                                                            Class<? extends Annotation> contendedClass,
                                                             Optional<MethodHandle> mayBeIsHiddenMH,
                                                             MemoryLayoutBasedStrategy specStrategy) {
 
@@ -108,8 +119,8 @@ public final class MemoryMeterStrategies
         Optional<MethodHandle> mayBeIsRecordMH = mayBeIsRecordMethodHandle();
 
         // The hidden method was added in Java 15 so if isHidden exists we are on a version greater or equal to Java 15
-        return mayBeIsHiddenMH.isPresent() ? new UnsafeStrategy(specification, unsafe, mayBeIsRecordMH.get(), mayBeIsHiddenMH.get(), specStrategy)
-                                           : new PreJava15UnsafeStrategy(specification, unsafe, mayBeIsRecordMH, specStrategy);
+        return mayBeIsHiddenMH.isPresent() ? new UnsafeStrategy(specification, unsafe, contendedClass, mayBeIsRecordMH.get(), mayBeIsHiddenMH.get(), specStrategy)
+                                           : new PreJava15UnsafeStrategy(specification, unsafe, contendedClass, mayBeIsRecordMH, specStrategy);
 
     }
 
@@ -134,7 +145,7 @@ public final class MemoryMeterStrategies
     }
 
     /**
-     * Returns the {@code MethodHandle} for the specified class and method.
+     * Returns the {@code MethodHandle} for the specified class and method if the method exists.
      *
      * @param klass the class
      * @param methodName the method name
@@ -143,11 +154,9 @@ public final class MemoryMeterStrategies
     private static Optional<MethodHandle> mayBeMethodHandle(Class<?> klass, String methodName)
     {
         try {
-
             Method method = klass.getMethod(methodName, new Class[0]);
             MethodHandles.Lookup lookup = MethodHandles.lookup();
             return Optional.of(lookup.unreflect(method));
-
         } catch (Exception e) {
             return Optional.empty();
         }
@@ -155,6 +164,24 @@ public final class MemoryMeterStrategies
 
     private static MemoryMeterStrategy createInstrumentationStrategy() {
         return instrumentation != null ? new InstrumentationStrategy(instrumentation) : null;
+    }
+
+    /**
+     * Load the {@code Contended} class.
+     * @return the {@code Contended} class.
+     */
+    @SuppressWarnings("unchecked")
+    private static Class<? extends Annotation> loadContendedClass()
+    {
+        try {
+            return (Class<? extends Annotation>) Class.forName("sun.misc.Contended");
+        } catch (ClassNotFoundException e) {
+            try {
+                return (Class<? extends Annotation>) Class.forName("jdk.internal.vm.annotation.Contended");
+            } catch (ClassNotFoundException ex) {
+                throw new IllegalStateException("The Contended annotation class could not be loaded.", ex);
+            }
+        }
     }
 
     public boolean hasInstrumentation() {
